--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Bienvenue</h1>
     <p>Veuillez patienter, la prochaine page s'ouvrira bientôt.</p>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
